--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -115,13 +115,13 @@ jobs:
         sudo apt-get install atheme-services
         python -m pip install --upgrade pip
         pip install pytest -r requirements.txt
-    - name: Checkout InspIRCd with Anope
+    - name: Checkout InspIRCd
       uses: actions/checkout@v2
       with:
         path: inspircd
         ref: master
         repository: inspircd/inspircd
-    - name: Build InspIRCd with Anope
+    - name: Build InspIRCd
       run: |
         cd $GITHUB_WORKSPACE/inspircd/
         patch src/inspircd.cpp < $GITHUB_WORKSPACE/inspircd_mainloop.patch
@@ -148,7 +148,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results InspIRCd with Anope (devel)
+        name: pytest results InspIRCd (devel)
         path: pytest.xml
   test-limnoria:
     runs-on: ubuntu-latest
