--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -66,13 +66,13 @@ jobs:
         sudo apt-get install atheme-services
         python -m pip install --upgrade pip
         pip install pytest -r requirements.txt
-    - name: Checkout InspIRCd with Anope
+    - name: Checkout InspIRCd
       uses: actions/checkout@v2
       with:
         path: inspircd
         ref: insp3
         repository: inspircd/inspircd
-    - name: Build InspIRCd with Anope
+    - name: Build InspIRCd
       run: |
         cd $GITHUB_WORKSPACE/inspircd/
         patch src/inspircd.cpp < $GITHUB_WORKSPACE/inspircd_mainloop.patch
@@ -99,7 +99,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results InspIRCd with Anope (devel_release)
+        name: pytest results InspIRCd (devel_release)
         path: pytest.xml
 name: irctest with devel_release versions
 'on':
