--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -2,36 +2,25 @@
 # Do not edit it manually, modifications will be lost.
 
 jobs:
-  publish-test-results:
-    if: success() || failure()
-    name: Publish Unit Tests Results
-    needs:
-    - test-solanum
-    - test-ergo
-    - test-inspircd
-    - test-inspircd-anope
-    - test-unrealircd
-    - test-unrealircd-anope
-    - test-limnoria
-    - test-sopel
+  build-anope:
     runs-on: ubuntu-latest
     steps:
-    - name: Download Artifacts
-      uses: actions/download-artifact@v2
+    - name: Checkout Anope
+      uses: actions/checkout@v2
       with:
-        path: artifacts
-    - name: Publish Unit Test Results
-      uses: EnricoMi/publish-unit-test-result-action@v1
-      with:
-        files: artifacts/**/*.xml
-  test-ergo:
+        path: anope
+        ref: 2.0.9
+        repository: anope/anope
+    - name: Build Anope
+      run: |-
+        cd $GITHUB_WORKSPACE/anope/
+        cp $GITHUB_WORKSPACE/data/anope/* .
+        CFLAGS=-O0 ./Config -quick
+        make -C build -j 4
+        make -C build install
+  build-ergo:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
     - uses: actions/setup-go@v2
       with:
         go-version: ~1.16
@@ -59,22 +48,15 @@ jobs:
         cd $GITHUB_WORKSPACE/ergo/
         make build
         make install
-    - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/go/bin:$PATH make ergo
-    - if: always()
-      name: Publish results
+    - name: Upload build artefacts
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results Ergo (devel)
-        path: pytest.xml
-  test-inspircd:
+        name: installed-ergo
+        path: ~/.local
+        retention-days: 1
+  build-inspircd:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
     - name: Install dependencies
       run: |-
         sudo apt-get install atheme-services
@@ -93,23 +75,15 @@ jobs:
         ./configure --prefix=$HOME/.local/inspircd --development
         make -j 4
         make install
-    - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/inspircd/bin:$PATH PYTEST_ARGS="$PYTEST_ARGS
-        -m 'not services'" make inspircd
-    - if: always()
-      name: Publish results
+    - name: Upload build artefacts
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results InspIRCd (devel)
-        path: pytest.xml
-  test-inspircd-anope:
+        name: installed-inspircd
+        path: ~/.local
+        retention-days: 1
+  build-inspircd-anope:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
     - name: Install dependencies
       run: |-
         sudo apt-get install atheme-services
@@ -128,36 +102,15 @@ jobs:
         ./configure --prefix=$HOME/.local/inspircd --development
         make -j 4
         make install
-    - name: Checkout Anope
-      uses: actions/checkout@v2
-      with:
-        path: anope
-        ref: 2.0.9
-        repository: anope/anope
-    - name: Build Anope
-      run: |-
-        cd $GITHUB_WORKSPACE/anope/
-        cp $GITHUB_WORKSPACE/data/anope/* .
-        CFLAGS=-O0 ./Config -quick
-        make -C build -j 4
-        make -C build install
-    - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/inspircd/bin:$PATH make
-        inspircd-anope
-    - if: always()
-      name: Publish results
+    - name: Upload build artefacts
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results InspIRCd (devel)
-        path: pytest.xml
-  test-limnoria:
+        name: installed-inspircd-anope
+        path: ~/.local
+        retention-days: 1
+  build-limnoria:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
@@ -172,22 +125,15 @@ jobs:
         pip install pytest -r requirements.txt
     - name: Install dependencies
       run: pip install git+https://github.com/ProgVal/Limnoria.git@testing cryptography
-    - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/bin:$PATH make limnoria
-    - if: always()
-      name: Publish results
+    - name: Upload build artefacts
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results Limnoria (devel)
-        path: pytest.xml
-  test-solanum:
+        name: installed-limnoria
+        path: ~/.local
+        retention-days: 1
+  build-solanum:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
@@ -213,22 +159,15 @@ jobs:
         ./configure --prefix=$HOME/.local/
         make -j 4
         make install
-    - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/bin:$PATH make solanum
-    - if: always()
-      name: Publish results
+    - name: Upload build artefacts
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results Solanum (devel)
-        path: pytest.xml
-  test-sopel:
+        name: installed-solanum
+        path: ~/.local
+        retention-days: 1
+  build-sopel:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
@@ -243,22 +182,15 @@ jobs:
         pip install pytest -r requirements.txt
     - name: Install dependencies
       run: pip install git+https://github.com/sopel-irc/sopel.git
-    - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/bin:$PATH make sopel
-    - if: always()
-      name: Publish results
+    - name: Upload build artefacts
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results Sopel (devel)
-        path: pytest.xml
-  test-unrealircd:
+        name: installed-sopel
+        path: ~/.local
+        retention-days: 1
+  build-unrealircd:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
@@ -284,23 +216,15 @@ jobs:
         CFLAGS=-O0 ./Config -quick
         make -j 4
         make install
-    - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/unrealircd/bin:$PATH
-        make unrealircd
-    - if: always()
-      name: Publish results
+    - name: Upload build artefacts
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results UnrealIRCd (devel)
-        path: pytest.xml
-  test-unrealircd-anope:
+        name: installed-unrealircd
+        path: ~/.local
+        retention-days: 1
+  build-unrealircd-anope:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
     - name: Cache dependencies
       uses: actions/cache@v2
       with:
@@ -326,21 +250,237 @@ jobs:
         CFLAGS=-O0 ./Config -quick
         make -j 4
         make install
-    - name: Checkout Anope
-      uses: actions/checkout@v2
+    - name: Upload build artefacts
+      uses: actions/upload-artifact@v2
       with:
-        path: anope
-        ref: 2.0.9
-        repository: anope/anope
-    - name: Build Anope
-      run: |-
-        cd $GITHUB_WORKSPACE/anope/
-        cp $GITHUB_WORKSPACE/data/anope/* .
-        CFLAGS=-O0 ./Config -quick
-        make -C build -j 4
-        make -C build install
+        name: installed-unrealircd-anope
+        path: ~/.local
+        retention-days: 1
+  publish-test-results:
+    if: success() || failure()
+    name: Publish Unit Tests Results
+    needs:
+    - test-charybdis
+    - test-solanum
+    - test-ergo
+    - test-inspircd
+    - test-inspircd-anope
+    - test-unrealircd
+    - test-unrealircd-anope
+    - test-limnoria
+    - test-sopel
+    runs-on: ubuntu-latest
+    steps:
+    - name: Download Artifacts
+      uses: actions/download-artifact@v2
+      with:
+        path: artifacts
+    - name: Publish Unit Test Results
+      uses: EnricoMi/publish-unit-test-result-action@v1
+      with:
+        files: artifacts/**/*.xml
+  test-charybdis:
+    needs:
+    - installed-charybdis
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed charybdis
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/unrealircd/bin:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/bin:$HOME/.local/bin:$PATH
+        make charybdis
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest results Charybdis (devel)
+        path: pytest.xml
+  test-ergo:
+    needs:
+    - installed-ergo
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed ergo
+    - name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/go/bin:$HOME/.local/bin:$PATH
+        make ergo
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest results Ergo (devel)
+        path: pytest.xml
+  test-inspircd:
+    needs:
+    - installed-inspircd
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed inspircd
+    - name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/inspircd/bin:$HOME/.local/bin:$PATH
+        PYTEST_ARGS="$PYTEST_ARGS -m 'not services'" make inspircd
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest results InspIRCd (devel)
+        path: pytest.xml
+  test-inspircd-anope:
+    needs:
+    - installed-inspircd-anope
+    - - installed-anope
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed inspircd-anope
+    - name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/inspircd/bin:$HOME/.local/bin:$PATH
+        make inspircd-anope
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest results InspIRCd (devel)
+        path: pytest.xml
+  test-limnoria:
+    needs:
+    - installed-limnoria
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed limnoria
+    - name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/bin:$HOME/.local/bin:$PATH
+        make limnoria
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest results Limnoria (devel)
+        path: pytest.xml
+  test-solanum:
+    needs:
+    - installed-solanum
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed solanum
+    - name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/bin:$HOME/.local/bin:$PATH
+        make solanum
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest results Solanum (devel)
+        path: pytest.xml
+  test-sopel:
+    needs:
+    - installed-sopel
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed sopel
+    - name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/bin:$HOME/.local/bin:$PATH
+        make sopel
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest results Sopel (devel)
+        path: pytest.xml
+  test-unrealircd:
+    needs:
+    - installed-unrealircd
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed unrealircd
+    - name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/unrealircd/bin:$HOME/.local/bin:$PATH
+        make unrealircd
+    - if: always()
+      name: Publish results
+      uses: actions/upload-artifact@v2
+      with:
+        name: pytest results UnrealIRCd (devel)
+        path: pytest.xml
+  test-unrealircd-anope:
+    needs:
+    - installed-unrealircd-anope
+    - - installed-anope
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.7
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed unrealircd-anope
+    - name: Test with pytest
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/unrealircd/bin:$HOME/.local/bin:$PATH
         make unrealircd-anope
     - if: always()
       name: Publish results
