--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -281,7 +281,7 @@ jobs:
         files: artifacts/**/*.xml
   test-charybdis:
     needs:
-    - installed-charybdis
+    - build-charybdis
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -300,11 +300,11 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results Charybdis (devel)
+        name: pytest results charybdis (devel)
         path: pytest.xml
   test-ergo:
     needs:
-    - installed-ergo
+    - build-ergo
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -323,11 +323,11 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results Ergo (devel)
+        name: pytest results ergo (devel)
         path: pytest.xml
   test-inspircd:
     needs:
-    - installed-inspircd
+    - build-inspircd
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -346,11 +346,11 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results InspIRCd (devel)
+        name: pytest results inspircd (devel)
         path: pytest.xml
   test-inspircd-anope:
     needs:
-    - installed-inspircd-anope
+    - build-inspircd-anope
     - - installed-anope
     runs-on: ubuntu-latest
     steps:
@@ -370,11 +370,11 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results InspIRCd (devel)
+        name: pytest results inspircd-anope (devel)
         path: pytest.xml
   test-limnoria:
     needs:
-    - installed-limnoria
+    - build-limnoria
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -393,11 +393,11 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results Limnoria (devel)
+        name: pytest results limnoria (devel)
         path: pytest.xml
   test-solanum:
     needs:
-    - installed-solanum
+    - build-solanum
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -416,11 +416,11 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results Solanum (devel)
+        name: pytest results solanum (devel)
         path: pytest.xml
   test-sopel:
     needs:
-    - installed-sopel
+    - build-sopel
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -439,11 +439,11 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results Sopel (devel)
+        name: pytest results sopel (devel)
         path: pytest.xml
   test-unrealircd:
     needs:
-    - installed-unrealircd
+    - build-unrealircd
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -462,11 +462,11 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results UnrealIRCd (devel)
+        name: pytest results unrealircd (devel)
         path: pytest.xml
   test-unrealircd-anope:
     needs:
-    - installed-unrealircd-anope
+    - build-unrealircd-anope
     - - installed-anope
     runs-on: ubuntu-latest
     steps:
@@ -486,7 +486,7 @@ jobs:
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results UnrealIRCd (devel)
+        name: pytest results unrealircd-anope (devel)
         path: pytest.xml
 name: irctest with devel versions
 'on':
