--- a/.github/workflows/test-devel_release.yml
+++ b/.github/workflows/test-devel_release.yml
@@ -167,7 +167,7 @@ jobs:
   test-inspircd-anope:
     needs:
     - build-inspircd-anope
-    - - installed-anope
+    - installed-anope
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -283,7 +283,7 @@ jobs:
   test-unrealircd-anope:
     needs:
     - build-unrealircd-anope
-    - - installed-anope
+    - installed-anope
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
