--- a/.github/workflows/test-stable.yml
+++ b/.github/workflows/test-stable.yml
@@ -385,7 +385,7 @@ jobs:
   test-inspircd-anope:
     needs:
     - build-inspircd-anope
-    - - installed-anope
+    - installed-anope
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -501,7 +501,7 @@ jobs:
   test-unrealircd-anope:
     needs:
     - build-unrealircd-anope
-    - - installed-anope
+    - installed-anope
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
