--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -34,7 +34,6 @@ jobs:
           $GITHUB_WORKSPACE/ergo
     - name: Install dependencies
       run: |-
-        sudo apt-get install atheme-services
         python -m pip install --upgrade pip
         pip install pytest -r requirements.txt
     - name: Checkout Ergo
@@ -59,7 +58,6 @@ jobs:
     steps:
     - name: Install dependencies
       run: |-
-        sudo apt-get install atheme-services
         python -m pip install --upgrade pip
         pip install pytest -r requirements.txt
     - name: Checkout InspIRCd
@@ -81,33 +79,6 @@ jobs:
         name: installed-inspircd
         path: ~/.local
         retention-days: 1
-  build-inspircd-anope:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Install dependencies
-      run: |-
-        sudo apt-get install atheme-services
-        python -m pip install --upgrade pip
-        pip install pytest -r requirements.txt
-    - name: Checkout InspIRCd
-      uses: actions/checkout@v2
-      with:
-        path: inspircd
-        ref: master
-        repository: inspircd/inspircd
-    - name: Build InspIRCd
-      run: |
-        cd $GITHUB_WORKSPACE/inspircd/
-        patch src/inspircd.cpp < $GITHUB_WORKSPACE/inspircd_mainloop.patch
-        ./configure --prefix=$HOME/.local/inspircd --development
-        make -j 4
-        make install
-    - name: Upload build artefacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: installed-inspircd-anope
-        path: ~/.local
-        retention-days: 1
   build-limnoria:
     runs-on: ubuntu-latest
     steps:
@@ -120,7 +91,6 @@ jobs:
           $GITHUB_WORKSPACE/placeholder
     - name: Install dependencies
       run: |-
-        sudo apt-get install atheme-services
         python -m pip install --upgrade pip
         pip install pytest -r requirements.txt
     - name: Install dependencies
@@ -143,7 +113,6 @@ jobs:
           $GITHUB_WORKSPACE/solanum
     - name: Install dependencies
       run: |-
-        sudo apt-get install atheme-services
         python -m pip install --upgrade pip
         pip install pytest -r requirements.txt
     - name: Checkout Solanum
@@ -177,7 +146,6 @@ jobs:
           $GITHUB_WORKSPACE/placeholder
     - name: Install dependencies
       run: |-
-        sudo apt-get install atheme-services
         python -m pip install --upgrade pip
         pip install pytest -r requirements.txt
     - name: Install dependencies
@@ -200,7 +168,6 @@ jobs:
           $GITHUB_WORKSPACE/unrealircd
     - name: Install dependencies
       run: |-
-        sudo apt-get install atheme-services
         python -m pip install --upgrade pip
         pip install pytest -r requirements.txt
     - name: Checkout UnrealIRCd
@@ -220,40 +187,6 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: installed-unrealircd
-        path: ~/.local
-        retention-days: 1
-  build-unrealircd-anope:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Cache dependencies
-      uses: actions/cache@v2
-      with:
-        key: ${{ runner.os }}-unrealircd-anope-devel
-        path: |-
-          ~/.cache
-          $GITHUB_WORKSPACE/unrealircd
-    - name: Install dependencies
-      run: |-
-        sudo apt-get install atheme-services
-        python -m pip install --upgrade pip
-        pip install pytest -r requirements.txt
-    - name: Checkout UnrealIRCd
-      uses: actions/checkout@v2
-      with:
-        path: unrealircd
-        ref: unreal52
-        repository: unrealircd/unrealircd
-    - name: Build UnrealIRCd
-      run: |
-        cd $GITHUB_WORKSPACE/unrealircd/
-        cp $GITHUB_WORKSPACE/data/unreal/* .
-        CFLAGS=-O0 ./Config -quick
-        make -j 4
-        make install
-    - name: Upload build artefacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: installed-unrealircd-anope
         path: ~/.local
         retention-days: 1
   publish-test-results:
@@ -292,10 +225,12 @@ jobs:
     - name: Download build artefacts
       uses: actions/download-artifact@v2
       with:
-        name: installed charybdis
+        name: installed-charybdis
+    - name: Install Atheme
+      run: sudo apt-get install atheme-services
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/bin:$HOME/.local/bin:$PATH
-        make charybdis
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+        charybdis
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -315,9 +250,11 @@ jobs:
     - name: Download build artefacts
       uses: actions/download-artifact@v2
       with:
-        name: installed ergo
+        name: installed-ergo
+    - name: Install Atheme
+      run: sudo apt-get install atheme-services
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/go/bin:$HOME/.local/bin:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH={software_config['prefix']}/bin:$PATH
         make ergo
     - if: always()
       name: Publish results
@@ -338,10 +275,12 @@ jobs:
     - name: Download build artefacts
       uses: actions/download-artifact@v2
       with:
-        name: installed inspircd
+        name: installed-inspircd
+    - name: Install Atheme
+      run: sudo apt-get install atheme-services
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/inspircd/bin:$HOME/.local/bin:$PATH
-        PYTEST_ARGS="$PYTEST_ARGS -m 'not services'" make inspircd
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH PYTEST_ARGS="$PYTEST_ARGS
+        -m 'not services'" PATH={software_config['prefix']}/bin:$PATH make inspircd
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -350,8 +289,8 @@ jobs:
         path: pytest.xml
   test-inspircd-anope:
     needs:
-    - build-inspircd-anope
-    - installed-anope
+    - build-inspircd
+    - build-anope
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -362,15 +301,21 @@ jobs:
     - name: Download build artefacts
       uses: actions/download-artifact@v2
       with:
-        name: installed inspircd-anope
+        name: installed-inspircd
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed-anope
+    - name: Install Atheme
+      run: sudo apt-get install atheme-services
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/inspircd/bin:$HOME/.local/bin:$PATH
-        make inspircd-anope
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH PYTEST_ARGS="$PYTEST_ARGS
+        -m 'not services'" PATH={software_config['prefix']}/bin:$PATH make anope
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results inspircd-anope (devel)
+        name: pytest results anope (devel)
         path: pytest.xml
   test-limnoria:
     needs:
@@ -385,10 +330,12 @@ jobs:
     - name: Download build artefacts
       uses: actions/download-artifact@v2
       with:
-        name: installed limnoria
+        name: installed-limnoria
+    - name: Install Atheme
+      run: sudo apt-get install atheme-services
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/bin:$HOME/.local/bin:$PATH
-        make limnoria
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+        limnoria
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -408,10 +355,12 @@ jobs:
     - name: Download build artefacts
       uses: actions/download-artifact@v2
       with:
-        name: installed solanum
+        name: installed-solanum
+    - name: Install Atheme
+      run: sudo apt-get install atheme-services
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/bin:$HOME/.local/bin:$PATH
-        make solanum
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+        solanum
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -431,10 +380,12 @@ jobs:
     - name: Download build artefacts
       uses: actions/download-artifact@v2
       with:
-        name: installed sopel
+        name: installed-sopel
+    - name: Install Atheme
+      run: sudo apt-get install atheme-services
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/bin:$HOME/.local/bin:$PATH
-        make sopel
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
+        sopel
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
@@ -454,9 +405,11 @@ jobs:
     - name: Download build artefacts
       uses: actions/download-artifact@v2
       with:
-        name: installed unrealircd
+        name: installed-unrealircd
+    - name: Install Atheme
+      run: sudo apt-get install atheme-services
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/unrealircd/bin:$HOME/.local/bin:$PATH
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH={software_config['prefix']}/bin:$PATH
         make unrealircd
     - if: always()
       name: Publish results
@@ -466,8 +419,8 @@ jobs:
         path: pytest.xml
   test-unrealircd-anope:
     needs:
-    - build-unrealircd-anope
-    - installed-anope
+    - build-unrealircd
+    - build-anope
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -478,15 +431,21 @@ jobs:
     - name: Download build artefacts
       uses: actions/download-artifact@v2
       with:
-        name: installed unrealircd-anope
+        name: installed-unrealircd
+    - name: Download build artefacts
+      uses: actions/download-artifact@v2
+      with:
+        name: installed-anope
+    - name: Install Atheme
+      run: sudo apt-get install atheme-services
     - name: Test with pytest
-      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=~/.local/unrealircd/bin:$HOME/.local/bin:$PATH
-        make unrealircd-anope
+      run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH={software_config['prefix']}/bin:$PATH
+        make anope
     - if: always()
       name: Publish results
       uses: actions/upload-artifact@v2
       with:
-        name: pytest results unrealircd-anope (devel)
+        name: pytest results anope (devel)
         path: pytest.xml
 name: irctest with devel versions
 'on':
