--- a/.github/workflows/test-devel.yml
+++ b/.github/workflows/test-devel.yml
@@ -32,10 +32,6 @@ jobs:
         path: |-
           ~/.cache
           $GITHUB_WORKSPACE/ergo
-    - name: Install dependencies
-      run: |-
-        python -m pip install --upgrade pip
-        pip install pytest -r requirements.txt
     - name: Checkout Ergo
       uses: actions/checkout@v2
       with:
@@ -56,10 +52,6 @@ jobs:
   build-inspircd:
     runs-on: ubuntu-latest
     steps:
-    - name: Install dependencies
-      run: |-
-        python -m pip install --upgrade pip
-        pip install pytest -r requirements.txt
     - name: Checkout InspIRCd
       uses: actions/checkout@v2
       with:
@@ -90,10 +82,6 @@ jobs:
           ~/.cache
           $GITHUB_WORKSPACE/placeholder
     - name: Install dependencies
-      run: |-
-        python -m pip install --upgrade pip
-        pip install pytest -r requirements.txt
-    - name: Install dependencies
       run: pip install git+https://github.com/ProgVal/Limnoria.git@testing cryptography
     - name: Upload build artefacts
       uses: actions/upload-artifact@v2
@@ -111,10 +99,6 @@ jobs:
         path: |-
           ~/.cache
           $GITHUB_WORKSPACE/solanum
-    - name: Install dependencies
-      run: |-
-        python -m pip install --upgrade pip
-        pip install pytest -r requirements.txt
     - name: Checkout Solanum
       uses: actions/checkout@v2
       with:
@@ -145,10 +129,6 @@ jobs:
           ~/.cache
           $GITHUB_WORKSPACE/placeholder
     - name: Install dependencies
-      run: |-
-        python -m pip install --upgrade pip
-        pip install pytest -r requirements.txt
-    - name: Install dependencies
       run: pip install git+https://github.com/sopel-irc/sopel.git
     - name: Upload build artefacts
       uses: actions/upload-artifact@v2
@@ -166,10 +146,6 @@ jobs:
         path: |-
           ~/.cache
           $GITHUB_WORKSPACE/unrealircd
-    - name: Install dependencies
-      run: |-
-        python -m pip install --upgrade pip
-        pip install pytest -r requirements.txt
     - name: Checkout UnrealIRCd
       uses: actions/checkout@v2
       with:
@@ -228,6 +204,10 @@ jobs:
         name: installed-charybdis
     - name: Install Atheme
       run: sudo apt-get install atheme-services
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install pytest -r requirements.txt
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
         charybdis
@@ -253,6 +233,10 @@ jobs:
         name: installed-ergo
     - name: Install Atheme
       run: sudo apt-get install atheme-services
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install pytest -r requirements.txt
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH={software_config['prefix']}/bin:$PATH
         make ergo
@@ -278,6 +262,10 @@ jobs:
         name: installed-inspircd
     - name: Install Atheme
       run: sudo apt-get install atheme-services
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install pytest -r requirements.txt
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH PYTEST_ARGS="$PYTEST_ARGS
         -m 'not services'" PATH={software_config['prefix']}/bin:$PATH make inspircd
@@ -308,6 +296,10 @@ jobs:
         name: installed-anope
     - name: Install Atheme
       run: sudo apt-get install atheme-services
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install pytest -r requirements.txt
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH PYTEST_ARGS="$PYTEST_ARGS
         -m 'not services'" PATH={software_config['prefix']}/bin:$PATH make anope
@@ -333,6 +325,10 @@ jobs:
         name: installed-limnoria
     - name: Install Atheme
       run: sudo apt-get install atheme-services
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install pytest -r requirements.txt
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
         limnoria
@@ -358,6 +354,10 @@ jobs:
         name: installed-solanum
     - name: Install Atheme
       run: sudo apt-get install atheme-services
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install pytest -r requirements.txt
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
         solanum
@@ -383,6 +383,10 @@ jobs:
         name: installed-sopel
     - name: Install Atheme
       run: sudo apt-get install atheme-services
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install pytest -r requirements.txt
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  make
         sopel
@@ -408,6 +412,10 @@ jobs:
         name: installed-unrealircd
     - name: Install Atheme
       run: sudo apt-get install atheme-services
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install pytest -r requirements.txt
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH={software_config['prefix']}/bin:$PATH
         make unrealircd
@@ -438,6 +446,10 @@ jobs:
         name: installed-anope
     - name: Install Atheme
       run: sudo apt-get install atheme-services
+    - name: Install irctest dependencies
+      run: |-
+        python -m pip install --upgrade pip
+        pip install pytest -r requirements.txt
     - name: Test with pytest
       run: PYTEST_ARGS='--junit-xml pytest.xml' PATH=$HOME/.local/bin:$PATH  PATH={software_config['prefix']}/bin:$PATH
         make anope
